--- a/css/screen.css
+++ b/css/screen.css
@@ -3306,3 +3306,40 @@ article {
 article a:hover {
   color: darkseagreen;
 }
+
+.accordion {
+  margin: 50px;
+}
+.accordion dt,
+.accordion dd {
+  padding: 10px;
+  border: 5px solid darkgreen;
+  border-bottom: 0;
+}
+.accordion dt:last-of-type,
+.accordion dd:last-of-type {
+  border-bottom: 5px solid darkgreen;
+}
+.accordion dt a,
+.accordion dd a {
+  display: block;
+  color: darkgreen;
+  font-weight: bold;
+}
+
+.accordion dt a:hover,
+.accordion dd a:hover {
+  display: block;
+  color: darkolivegreen;
+  font-weight: bold;
+}
+
+.accordion dd {
+  border-top: 0;
+  font-size: 12px;
+}
+.accordion dd:last-of-type {
+  border-top: 0px solid darkgreen;
+  position: relative;
+  top: -1px;
+}
