--- a/css/screen.css
+++ b/css/screen.css
@@ -3312,17 +3312,18 @@ article a:hover {
 }
 
 .accordion {
+ border: 5px solid darkgreen;
   margin: 50px;
 }
 .accordion dt,
 .accordion dd {
   padding: 10px;
-  border: 5px solid darkgreen;
-  border-bottom: 0;
+  /*border: 5px solid darkgreen;*/
+  border-bottom: 0px;
 }
 .accordion dt:last-of-type,
 .accordion dd:last-of-type {
-  border-bottom: 5px solid darkgreen;
+  /*border-bottom: 5px solid darkgreen;*/
 }
 .accordion dt a,
 .accordion dd a {
@@ -3339,11 +3340,11 @@ article a:hover {
 }
 
 .accordion dd {
-  border-top: 0;
+  border-top: 0px;
   font-size: 12px;
 }
 .accordion dd:last-of-type {
-  border-top: 0px solid darkgreen;
+  border-top: 5px solid darkgreen;
   position: relative;
   top: -1px;
 }
